processed/gerrit/txt/44670.txt
Change:     44670
Subject:    LU-14093 tests: silence gcc10 error for badarea_io
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/44670
Change-Id:  Iee79c7988cc209fd099c23c38a8bd7df96015b05
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      James Simmons
Created:    2021-08-16 17:08:15.000000000
Updated:    2021-08-25 06:23:53.000000000
Patch Set:  4
Insertions: +1
Deletions:  -0
Comments:   1 (0 unresolved)

--- Labels ---
  Code-Review: Arshad Hussain: +1; James Nunez: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Alex Zhuravlev, James Simmons, Jian Yu, James Nunez, Arshad Hussain, Shaun Tancheff

--- Commit Message ---
LU-14093 tests: silence gcc10 error for badarea_io

With gcc10 badarea_io will fail to build with the following error.

badarea_io.c: In function ‘main’:
badarea_io.c:59:7: error: ‘write’ reading 2097152 bytes from a
                           region of size 4 [-Werror=stringop-overflow=]
   59 |  rc = write(fd, &fd, 2UL*1024*1024);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Talking to Oleg see stated this is the done this way on purpose.
So instead of 'fixing' the issue in this case we silence the gcc
warning.

Test-Parameters: trivial
Test-Parameters: env=ONLY=133f,133g testlist=sanity
Change-Id: Iee79c7988cc209fd099c23c38a8bd7df96015b05
Signed-off-by: James Simmons <jsimmons@infradead.org>
Reviewed-on: https://review.whamcloud.com/44670
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Nunez <jnunez@whamcloud.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (James Simmons, 2021-08-16 17:08:15.000000000) ---
Uploaded patch set 1.

--- Message (James Simmons, 2021-08-16 17:08:57.000000000) ---
Uploaded patch set 2: Patch Set 1 was rebased.

--- Message (jenkins, 2021-08-16 17:08:57.000000000) ---
Patch Set 1:

No Builds Executed

--- Message (Lustre Gerrit Janitor, 2021-08-16 17:10:11.000000000) ---
Patch Set 2:

Cannot detect any functional changes in this patch

--- Message (wc-checkpatch, 2021-08-16 17:11:07.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (James Simmons, 2021-08-16 17:47:38.000000000) ---
Patch Set 3: Commit message was updated.

--- Message (jenkins, 2021-08-16 17:47:42.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/22460/ : ABORTED

https://build.whamcloud.com/job/lustre-reviews/82541/ : ABORTED

--- Message (Lustre Gerrit Janitor, 2021-08-16 17:48:37.000000000) ---
Patch Set 3:

Cannot detect any functional changes in this patch

--- Message (wc-checkpatch, 2021-08-16 17:51:53.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (jenkins, 2021-08-16 18:44:22.000000000) ---
Patch Set 3: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/22463/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/82544/ : SUCCESS

--- Message (James Simmons, 2021-08-17 15:35:26.000000000) ---
Patch Set 3:

ping

--- Message (James Nunez, 2021-08-17 16:48:29.000000000) ---
Patch Set 3: Code-Review+1

(1 comment)

--- Message (James Simmons, 2021-08-17 17:16:30.000000000) ---
Patch Set 3:

Ah that is what I did wrong. Thanks.

--- Message (Arshad Hussain, 2021-08-18 05:18:17.000000000) ---
Patch Set 3: Code-Review+1

--- Message (Oleg Drokin, 2021-08-25 06:23:51.000000000) ---
Patch Set 3: Code-Review+2

--- Message (Oleg Drokin, 2021-08-25 06:23:53.000000000) ---
Change has been successfully cherry-picked as 084546f7d01b0eec8dafae9bc50edc778c3886ca by Oleg Drokin
